[Fixes #1643] Add third party notice to identity UI package

--- a/src/UI/Microsoft.AspNetCore.Identity.UI.csproj
+++ b/src/UI/Microsoft.AspNetCore.Identity.UI.csproj
@@ -16,6 +16,7 @@
     <EmbeddedResource Remove="wwwroot/**/LICENSE*" />
     <None Remove="wwwroot/**/.bower.json" />
     <None Remove="wwwroot/**/LICENSE*" />
+    <None Include="THIRD-PARTY-NOTICES" Pack="true" />
   </ItemGroup>
     
   <ItemGroup>
