Ensure restore settings and package versions flow into test projects during CI builds

--- a/test/dotnet-watch.FunctionalTests/TestProjects/Dependency/Dependency.csproj
+++ b/test/dotnet-watch.FunctionalTests/TestProjects/Dependency/Dependency.csproj
@@ -1,7 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard1.5</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
   </PropertyGroup>
 
 </Project>
