--- a/test/dotnet-watch.FunctionalTests/dotnet-watch.FunctionalTests.csproj
+++ b/test/dotnet-watch.FunctionalTests/dotnet-watch.FunctionalTests.csproj
@@ -21,31 +21,16 @@
     <PackageReference Include="Microsoft.Extensions.CommandLineUtils.Sources" PrivateAssets="All" Version="$(MicrosoftExtensionsCommandLineUtilsSourcesPackageVersion)" />
   </ItemGroup>
 
-  <Target Name="GenerateRestoreSourcesFile" BeforeTargets="Compile">
-    <PropertyGroup>
-      <RestoreSourcesFile>$(MSBuildThisFileDirectory)/TestProjects/NuGet.config</RestoreSourcesFile>
-    </PropertyGroup>
-
-    <CreateItem Include="$(RestoreSources)">
-      <Output TaskParameter="Include" ItemName="RestoreSourcesItems"/>
-    </CreateItem>
-
-    <ItemGroup>
-      <NuGetConfigLines Include="&lt;?xml version=&quot;1.0&quot; encoding=&quot;utf-8&quot;?&gt;" />
-      <NuGetConfigLines Include="&lt;configuration&gt;" />
-      <NuGetConfigLines Include="&lt;packageSources&gt;" />
-      <NuGetConfigLines Include="&lt;clear/&gt;" />
-      <NuGetConfigLines Include="&lt;add key=&quot;%(RestoreSourcesItems.Identity)&quot; value=&quot;%(RestoreSourcesItems.Identity)&quot; /&gt;" />
-      <NuGetConfigLines Include="&lt;/packageSources&gt;" />
-      <NuGetConfigLines Include="&lt;/configuration&gt;" />
-    </ItemGroup>
-
-    <WriteLinesToFile
-      File="$(RestoreSourcesFile)"
-      Lines="@(NuGetConfigLines)"
-      Overwrite="true"
-      Encoding="UTF-8" />
-  </Target>
+  <ItemGroup>
+    <AssemblyAttribute Include="System.Reflection.AssemblyMetadataAttribute">
+      <_Parameter1>TestSettings:RestoreSources</_Parameter1>
+      <_Parameter2>$(RestoreSources)</_Parameter2>
+    </AssemblyAttribute>
+     <AssemblyAttribute Include="System.Reflection.AssemblyMetadataAttribute">
+      <_Parameter1>TestSettings:RuntimeFrameworkVersion</_Parameter1>
+      <_Parameter2>$(RuntimeFrameworkVersion)</_Parameter2>
+    </AssemblyAttribute>
+  </ItemGroup>
 
   <Target Name="CleanTestProjects" BeforeTargets="CoreCompile">
     <RemoveDir Directories="$(TargetDir)TestProjects" Condition="Exists('$(TargetDir)TestProjects')" />
