--- a/src/AspNetCoreModuleV2/AspNetCore/aspnetcoremodule.rc
+++ b/src/AspNetCoreModuleV2/AspNetCore/aspnetcoremodule.rc
@@ -81,7 +81,7 @@ BEGIN
             VALUE "FileVersion", FileVersionStr
             VALUE "InternalName", "aspnetcore"
             VALUE "LegalCopyright", "Copyright (C) Microsoft Corporation"
-            VALUE "OriginalFilename", "aspnetcoreV2.dll"
+            VALUE "OriginalFilename", "aspnetcore.dll"
             VALUE "ProductName", "ASP.NET Core Module"
             VALUE "ProductVersion", ProductVersionStr
         END
