fix #1923 by avoiding extra build step (#1924)

--- a/clients/ts/FunctionalTests/package.json
+++ b/clients/ts/FunctionalTests/package.json
@@ -21,7 +21,8 @@
     "build:tsc": "node ../node_modules/typescript/bin/tsc --project ./tsconfig.json",
     "build:rollup": "node ../node_modules/rollup/bin/rollup -c",
     "pretest": "npm run build",
-    "test": "dotnet build && ts-node --project ./selenium/tsconfig.json ./selenium/run-tests.ts",
+    "test": "dotnet build && npm run test-only",
+    "test-only": "ts-node --project ./selenium/tsconfig.json ./selenium/run-tests.ts",
     "ci-test": "ts-node --project ./selenium/tsconfig.json ./selenium/run-ci-tests.ts"
   },
   "author": "",
