Prepare for RazorAssemblyAttribute -> RazorTargetAssemblyAttribute rename

--- a/src/UI/Microsoft.AspNetCore.Identity.UI.csproj
+++ b/src/UI/Microsoft.AspNetCore.Identity.UI.csproj
@@ -41,6 +41,11 @@
       <_Parameter1>BuildNumber</_Parameter1>
       <_Parameter2>$(BuildNumber)</_Parameter2>
     </RazorAssemblyAttribute>
+
+    <RazorTargetAssemblyAttribute Include="System.Reflection.AssemblyMetadataAttribute" Condition="'$(BuildNumber)' != ''">
+      <_Parameter1>BuildNumber</_Parameter1>
+      <_Parameter2>$(BuildNumber)</_Parameter2>
+    </RazorTargetAssemblyAttribute>
   </ItemGroup>
 
   <ItemGroup>
