Generate symbols.nupkg for Mvc.Razor

--- a/src/Microsoft.AspNetCore.Mvc.Razor/Microsoft.AspNetCore.Mvc.Razor.nuspec
+++ b/src/Microsoft.AspNetCore.Mvc.Razor/Microsoft.AspNetCore.Mvc.Razor.nuspec
@@ -39,5 +39,6 @@
   <files>
     <file src="$OutputBinary$" target="lib\$targetframework$\" />
     <file src="$OutputDocumentation$" target="lib\$targetframework$\" />
+    <file src="$OutputSymbol$" target="lib\$targetframework$\" />
   </files>
 </package>
